# airone

./: .deepsource.toml  index.yaml  pyproject.toml  sitemap.xml  tox.ini
.circleci/: config.yml
acl/: models.py  views.py
acl/api_v2/: serializers.py  views.py
acl/tests/: test_view.py
airone/: settings_common.py  urls.py
airone/auth/: ldap.py  view.py
airone/lib/: drf.py  elasticsearch.py  http.py  job.py  multidb.py  plugin_dispatch.py  resources.py  settings.py  test.py  types.py
airone/libs/: auth.py  utils.py
airone/middleware/: gate_keeper.py  log.py  route_guide.py
airone/plugins/: hook_manager.py  hooks.py  integration.py  override_manager.py  registry.py
airone/tests/: test_auto_complement.py  test_db.py  test_elasticsearch.py  test_event_notificaiton.py  test_http.py  test_ldap_login.py
api_v1/: auth.py  serializers.py
api_v1/entity/: views.py
api_v1/entry/: serializer.py  views.py
api_v1/job/: views.py
api_v1/tests/: test_api.py
api_v1/tests/entity/: test_api.py
api_v1/tests/entry/: test_api_search_chain.py  test_update_history.py
api_v1/tests/job/: test_api.py
api_v1/user/: views.py
category/: models.py
category/api_v2/: serializers.py  views.py
category/tests/: test_api_v2.py
custom_view_sample/api_v1/: urls.py  views.py
custom_view_sample/api_v2/: urls.py
custom_view_sample/lib/: task.py
custom_view_sample/tasks/: __init__.py
dashboard/tests/: test_view.py
entity/: models.py  tasks.py  views.py
entity/api_v1/: views.py
entity/api_v2/: serializers.py  views.py
entity/tests/: test_api_v2.py  test_view.py
entry/: admin.py  models.py  services.py  tasks.py  views.py
entry/api_v1/: views.py
entry/api_v2/: serializers.py  views.py
entry/tests/: test_api_v2.py  test_api_v2_advanced_search_with_join_attr.py  test_api_v2_alias.py  test_api_v2_history.py  test_api_v2_import_export.py  test_api_v2_serializer.py  test_custom_view.py  test_model.py  test_model_alias.py  test_model_operations.py  test_model_validation.py  test_service.py  test_view.py  test_view_import_export.py
frontend/src/: App.tsx  TestWrapper.tsx  Theme.tsx  ThemeContext.tsx
frontend/src/components/acl/: ACLForm.tsx  ACLHistoryList.tsx
frontend/src/components/category/: CategoryForm.tsx  CategoryListHeader.test.tsx  CategoryListHeader.tsx
frontend/src/components/common/: AironeBreadcrumbs.tsx  AironeTableHeadCell.tsx  AironeTableHeadRow.tsx  ErrorPageBase.tsx  Header.tsx  PageHeader.tsx  SearchBox.tsx  Table.tsx
frontend/src/components/entity/: EntityBreadcrumbs.test.tsx  EntityControlMenu.test.tsx  EntityForm.tsx  EntityHistoryList.test.tsx  EntityHistoryList.tsx  EntityList.test.tsx  EntityList.tsx  EntityListCard.test.tsx  EntityListCard.tsx
frontend/src/components/entry/: AdvancedSearchEditModal.test.tsx  AdvancedSearchEditModal.tsx  AdvancedSearchJoinModal.test.tsx  AdvancedSearchJoinModal.tsx  AliasEntryList.test.tsx  AliasEntryList.tsx  AttributeValue.tsx  CopyForm.test.tsx  CopyForm.tsx  EntryAttributes.tsx  EntryForm.test.tsx  EntryForm.tsx  EntryHistoryList.tsx  EntryList.test.tsx  EntryListCard.test.tsx  EntryListCard.tsx  EntrySelfHistoryList.tsx  RestorableEntryList.tsx  SearchResultControlMenu.test.tsx  SearchResultControlMenu.tsx  SearchResultControlMenuForEntry.test.tsx  SearchResultControlMenuForEntry.tsx  SearchResultControlMenuForReferral.tsx  SearchResults.test.tsx  SearchResults.tsx  SearchResultsTableHead.test.tsx  SearchResultsTableHead.tsx
frontend/src/components/group/: GroupForm.tsx  GroupTreeRoot.tsx
frontend/src/components/job/: JobList.test.tsx  JobList.tsx
frontend/src/components/role/: RoleForm.tsx  RoleImportModal.test.tsx  RoleList.tsx
frontend/src/components/trigger/: Actions.test.tsx  Conditions.test.tsx  TriggerFormSchema.test.ts  TriggerFormSchema.tsx
frontend/src/components/user/: ChangeUserAuthModal.tsx  UserControlMenu.tsx  UserForm.test.tsx  UserForm.tsx  UserList.test.tsx  UserPasswordFormModal.tsx
frontend/src/hooks/: useJobCompletionNotification.test.tsx  useJobCompletionNotification.tsx
frontend/src/pages/: ACLEditPage.tsx  ACLHistoryPage.tsx  AdvancedSearchPage.test.tsx  AdvancedSearchPage.tsx  AdvancedSearchResultsPage.tsx  AliasEntryListPage.tsx  EntityEditPage.test.tsx  EntityEditPage.tsx  EntryCopyPage.test.tsx  EntryHistoryListPage.tsx  ListAliasEntryPage.tsx  NonTermsServiceAgreement.tsx  NotFoundErrorPage.tsx  RoleEditPage.tsx  SchemaValidationErrorPage.tsx  TriggerEditPage.tsx  TriggerListPage.tsx
frontend/src/pages/__snapshots__/: ACLEditPage.test.tsx.snap  ACLHistoryPage.test.tsx.snap  AdvancedSearchResultsPage.test.tsx.snap  CategoryEditPage.test.tsx.snap  DashboardPage.test.tsx.snap  EntityEditPage.test.tsx.snap  EntityHistoryPage.test.tsx.snap  EntityListPage.test.tsx.snap  EntryCopyPage.test.tsx.snap  EntryDetailsPage.test.tsx.snap  EntryEditPage.test.tsx.snap  EntryHistoryListPage.test.tsx.snap  EntryListPage.test.tsx.snap  EntryRestorePage.test.tsx.snap  ForbiddenErrorPage.test.tsx.snap  GroupEditPage.test.tsx.snap  GroupListPage.test.tsx.snap  JobListPage.test.tsx.snap  ListAliasEntryPage.test.tsx.snap  ListCategoryPage.test.tsx.snap  LoginPage.test.tsx.snap  (+9 more)
frontend/src/repository/: AironeApiClient.ts
frontend/src/services/: AIroneAPIErrorUtil.test.ts  JobUtil.test.ts  JobUtil.ts
frontend/src/types/: mui.d.ts
group/: models.py
group/api_v2/: serializers.py  views.py
group/tests/: test_model.py
job/: views.py
job/api_v2/: serializers.py  views.py
job/tests/: test_api_v2.py  test_model.py  test_view.py
plugin/sdk/pagoda_plugin_sdk/: decorators.py  mixins.py  models.py  override.py  plugin.py  protocols.py  utils.py
role/: models.py  views.py
role/api_v2/: serializers.py  views.py
role/tests/: base.py  test_api_v1.py  test_api_v2.py  test_view.py
tools/: generate_testdata.py
tools/tests/: test_update_es_document.py
trigger/api_v2/: serializers.py  views.py
trigger/tests/: test_api_v2.py  test_models.py
user/: models.py  views.py
user/api_v2/: serializers.py  views.py
user/tests/: test_model.py  test_view.py
(+20 files in other folders)
