[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
allow_untyped_globals = true
follow_imports = "normal"
ignore_missing_imports = false
explicit_package_bases = true
mypy_path = ".:plugin/sdk:plugin/examples/pagoda-cross-entity-plugin:plugin/examples/pagoda-hello-world-plugin"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
exclude = ["plugin/.*/tests/"]

check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.django-stubs]
django_settings_module = "airone.settings"
strict_settings = false

# Tests: ignore for now
[[tool.mypy.overrides]]
module = ["*.tests.*"]
ignore_errors = true

# Third-party without type stubs
[[tool.mypy.overrides]]
module = [
    "boto3.*", "botocore.*", "configurations.*",
    "custom_view.*", "custom_view_sample.*",
    "ddtrace.*", "django_filters.*", "django_replicated.*", "environ.*", "flower.*",
    "import_export.*", "kombu.*", "ldap.*", "natsort.*",
    "onelogin.*", "requests_html.*", "simple_history.*",
    "social_core.*", "social_django.*", "tablib.*",
]
ignore_missing_imports = true

# Production modules with type errors (to be fixed incrementally in subsequent PRs)
# As errors are fixed, modules should be removed from this list.
[[tool.mypy.overrides]]
module = [
    "acl.models",
    "acl.api_v2.serializers",
    "acl.api_v2.views",
    "airone.auth.view",
    "airone.lib.http",
    "airone.lib.test",
    "airone.plugins.integration",
    "airone.plugins.override_manager",
    "airone.urls",
    "api_v1.entity.views",
    "api_v1.entry.serializer",
    "api_v1.entry.views",
    "api_v1.job.views",
    "api_v1.views",
    "entity.api_v2.serializers",
    "entity.api_v2.views",
    "entity.tasks",
    "entity.views",
    "entry.api_v1.views",
    "entry.api_v2.serializers",
    "entry.api_v2.views",
    "entry.models",
    "entry.tasks",
    "entry.views",
    "group.api_v1.views",
    "group.api_v2.serializers",
    "group.api_v2.views",
    "group.models",
    "group.tasks",
    "group.views",
    "job.api_v2.views",
    "job.models",
    "pagoda_hello_world_plugin.api_v2.views",
    "pagoda_plugin_sdk.api.base",
    "pagoda_plugin_sdk.api.pagination",
    "role.api_v2.serializers",
    "role.api_v2.views",
    "role.models",
    "role.tasks",
    "role.views",
    "tools.generate_testdata",
    "trigger.api_v2.views",
    "trigger.models",
    "trigger.tasks",
    "user.api_v2.serializers",
    "user.api_v2.views",
    "user.forms",
    "user.models",
    "custom_view.*",
    "custom_view_sample.*",
]
ignore_errors = true

[tool.ruff]
# Pyflakes (F), pycodestyle (E, W), isort (I)
lint.select = ["E", "F", "I", "W"]
line-length = 100
extend-exclude = ["./*/migrations", "manage.py", "./node_modules"]

[tool.ruff.lint.per-file-ignores]
"./airone/tests/test_elasticsearch.py" = ["E501"]

[project]
name = "airone"
version = "3.73.0"
description = ""
authors = [{name = "Hiroyasu OHYAMA"}]
license = {text = "GPLv2"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.26.114",
    "celery==5.5.3",
    "django-configurations==2.5",
    "ddtrace==2.1.1",
    "django-debug-toolbar==3.2.4",
    "django-environ==0.12.0",
    "django-filter==24.3",
    "django-import-export==3.3.1",
    "django-replicated==2.7",
    "django-simple-history==3.11.0",
    "django-storages==1.14.1",
    "django==4.2.28",
    "djangorestframework==3.15.2",
    "markdown>=3.7",
    "drf-spectacular==0.29.0",
    "elasticsearch==8.17.0",
    "flower==1.2.0",
    "gunicorn==23.0.0",
    "kombu==5.5.4",
    "lxml_html_clean==0.4.0",
    "mysqlclient==2.2.0",
    "natsort==5.3.3",
    "python-ldap==3.4.5",
    "python3-saml==1.12.0",
    "pyyaml==6.0.1",
    "requests==2.32.4",
    "setproctitle==1.3.2",
    "social-auth-app-django==5.4.3",
    "social-auth-core==4.5.1",
    "uritemplate==3.0.1",
    "whitenoise==5.2.0",
    "pydantic>=2.10.6",
    "pagoda-plugin-sdk",
]

[tool.uv.sources]
pagoda-plugin-sdk = { path = "./plugin/sdk", editable = true }
pagoda-hello-world-plugin = { path = "./plugin/examples/pagoda-hello-world-plugin", editable = true }
pagoda-cross-entity-sample-plugin = { path = "./plugin/examples/pagoda-cross-entity-plugin", editable = true }
pagoda-echo-plugin = { git = "https://github.com/syucream/pagoda-backend-plugin-example" }

[tool.uv]
override-dependencies = ["pagoda-plugin-sdk"]

[project.optional-dependencies]
dev = [
    "coverage>=7.3.0",
    "mypy>=1.15.0",
    "django-stubs>=5.2.0",
    "djangorestframework-stubs>=3.15.0",
    "celery-types>=0.22.0",
    "requests-html==0.10.0",
    "types-requests>=2.31.0.6",
    "types-pyyaml>=6.0.12.20241230",
    "types-pytz>=2025.1.0.20250204",
    "types-mock>=5.1.0.1",
    "ruff>=0.9.9",
    "tblib>=3.0.0",
    "lxml-html-clean>=0.4.0",
]
plugins = [
    "pagoda-hello-world-plugin",
    "pagoda-cross-entity-sample-plugin",
    "pagoda-echo-plugin",
]
