[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
follow_imports = "normal"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
explicit_package_bases = true
# Include plugin/sdk so mypy resolves the editable-installed pagoda_plugin_sdk
# package against its real (now py.typed) sources instead of treating it as Any.
mypy_path = [".", "plugin/sdk"]
# Each plugin package ships its own top-level "tests" package. Once
# plugin/sdk is on mypy_path they collide as duplicate modules, so exclude
# plugin test trees from discovery (they are already ignored for errors).
exclude = ['plugin/.*/tests/', 'plugin/examples/', 'virtualenv_old/', 'custom_view/', 'custom_view_sample/']

# Gradual type checking improvements
check_untyped_defs = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
strict_equality = true
warn_unreachable = true
no_implicit_reexport = true
disallow_untyped_calls = true
extra_checks = true
disallow_untyped_decorators = true
disallow_any_generics = true
warn_return_any = true
# Production code (including plugin/sdk and tools) must be fully annotated.
# Test and migration trees are exempted via the ignore_errors overrides below.
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.django-stubs]
django_settings_module = "airone.settings"
strict_settings = false

[[tool.mypy.overrides]]
module = ["*.tests.*", "*/tests/*", "tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

# Views, serializers, tasks, and services sit at the Django/DRF boundary and
# surface a class of errors that are structural framework patterns rather than
# bugs.  Suppress only specific, well-understood codes here; all other error
# categories (e.g. import-untyped, name-defined, syntax) continue to be caught.
#
# Codes suppressed and why:
#   type-arg     — DRF ViewSet/Serializer generics and Celery Task generics are
#                  rarely annotated in practice; requires pervasive refactor.
#   union-attr   — request.user is User|AnonymousUser; .first() returns T|None.
#                  Guard patterns are implied by surrounding logic.
#   arg-type     — AnonymousUser passed where User expected; ORM Q-objects, etc.
#   assignment   — Type narrowing after .filter(...).first() assignments.
#   attr-defined — django-simple-history injects _history_user dynamically.
#   misc         — ORM lookup types, @csrf_protect on class methods, etc.
#   no-any-return — Django ORM and DRF internals return Any in many places.
#   return-value — DRF get_obj_with_check_perm returns T|None vs T pattern.
#   index        — Q-object and dict indexing type inference.
#   override     — DRF ViewSet action signatures differ from base class stubs.
#   operator     — Q-object | / & operator typing.
[[tool.mypy.overrides]]
module = [
    "acl.api_v2.*",
    "acl.views",
    "api_v1.*",
    "category.api_v2.*",
    "dashboard.views",
    "entity.api_v1.*",
    "entity.api_v2.*",
    "entity.tasks",
    "entity.views",
    "entry.api_v1.*",
    "entry.api_v2.*",
    "entry.services",
    "entry.tasks",
    "entry.views",
    "group.api_v1.*",
    "group.api_v2.*",
    "group.tasks",
    "group.views",
    "job.api_v2.*",
    "pagoda_plugin_sdk.api.*",
    "pagoda_plugin_sdk.override",
    "role.api_v1.*",
    "role.api_v2.*",
    "role.tasks",
    "role.views",
    "tools.generate_testdata",
    "trigger.api_v2.*",
    "trigger.tasks",
    "user.api_v2.*",
    "user.forms",
    "user.views",
    "webhook.api_v1.*",
    "webhook.views",
]
disable_error_code = [
    "type-arg",
    "union-attr",
    "arg-type",
    "assignment",
    "attr-defined",
    "misc",
    "no-any-return",
    "return-value",
    "index",
    "override",
    "operator",
    "unreachable",
]


[tool.ruff]
# Pyflakes (F), pycodestyle (E, W), isort (I), pyupgrade (UP), type-checking (TC)
lint.select = ["E", "F", "I", "W", "UP", "TC"]
# UP031: printf-style formatting is not type-related; defer as separate cleanup
lint.ignore = ["UP031"]
line-length = 100
extend-exclude = ["./*/migrations", "manage.py", "./node_modules"]

[tool.ruff.lint.per-file-ignores]
"./airone/tests/test_elasticsearch.py" = ["E501"]

[project]
name = "airone"
version = "3.73.0"
description = ""
authors = [{name = "Hiroyasu OHYAMA"}]
license = {text = "GPLv2"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.42.62",
    "celery>=5.6.0,<6",
    "django-configurations==2.5.1",
    "ddtrace==3.19.7",
    "django-environ==0.12.0",
    "django-filter==24.3",
    "django-import-export==4.4.0",
    "django-multidb-router>=0.11",
    "django-simple-history==3.11.0",
    "django-storages==1.14.6",
    "django==5.2.14",
    "djangorestframework==3.16.1",
    "markdown>=3.7",
    "drf-spectacular==0.29.0",
    "elasticsearch==8.17.0",
    "gunicorn==23.0.0",
    "lxml_html_clean==0.4.4",
    "mysqlclient>=2.2.8",
    "natsort==8.4.0",
    "python-ldap==3.4.5",
    "python3-saml==1.12.0",
    "pyyaml==6.0.1",
    "requests==2.33.0",
    "social-auth-app-django==5.4.3",
    "social-auth-core==4.5.1",
    "whitenoise==6.12.0",
    "pydantic>=2.10.6",
    "pagoda-plugin-sdk",
]

[tool.uv.sources]
pagoda-plugin-sdk = { path = "./plugin/sdk", editable = true }
pagoda-hello-world-plugin = { path = "./plugin/examples/pagoda-hello-world-plugin", editable = true }
pagoda-cross-entity-sample-plugin = { path = "./plugin/examples/pagoda-cross-entity-plugin", editable = true }
pagoda-echo-plugin = { git = "https://github.com/syucream/pagoda-backend-plugin-example" }

[tool.uv]
override-dependencies = ["pagoda-plugin-sdk"]

[project.optional-dependencies]
dev = [
    "celery-types>=0.22.0",
    "coverage>=7.3.0",
    "django-debug-toolbar==4.4.6",
    "django-stubs[compatible-mypy]>=5.2.0",
    "djangorestframework-stubs[compatible-mypy]>=3.15.0",
    "flower==1.2.0",
    "mypy>=1.15.0",
    "requests-html==0.10.0",
    "types-requests>=2.31.0.6",
    "types-pyyaml>=6.0.12.20241230",
    "types-pytz>=2025.1.0.20250204",
    "types-mock>=5.1.0.1",
    "ruff>=0.9.9",
    "tblib>=3.0.0",
    "lxml-html-clean>=0.4.0",
]
plugins = [
    "pagoda-hello-world-plugin",
    "pagoda-cross-entity-sample-plugin",
    "pagoda-echo-plugin",
]
